--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,8 +1,8 @@
 @import url(../../../stylesheets/application.css);
 /*
- * gitmike
- * This is github-like theme for Redmine.
- * It is based on A1 theme version 1.0.3 by Kirill Bezrukov www.redminecrm.com.
+ * reevo redmine theme
+ * This is github-like theme for Redmine
+ * It is based on gitmike and A1 theme version 1.0.3 by Kirill Bezrukov www.redminecrm.com.
  * @see https://github.com/makotokw/redmine-theme-gitmike
  * @license GPL3 License
  */
