using Open Sans font

--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -1,22 +1,34 @@
 @import url(../../../stylesheets/application.css);
-/*
- * reevo redmine theme
- * This is github-like theme for Redmine
- * It is based on gitmike and A1 theme version 1.0.3 by Kirill Bezrukov www.redminecrm.com.
+@font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 300; src: local("Open Sans Light"), local("OpenSans-Light"), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/DXI1ORHCpsQm3Vp6mXoaTXhCUOGz7vYGh680lGh-uXM.woff) format("woff"); }
+
+@font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 400; src: local("Open Sans"), local("OpenSans"), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format("woff"); }
+
+@font-face { font-family: 'Open Sans'; font-style: normal; font-weight: 700; src: local("Open Sans Bold"), local("OpenSans-Bold"), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/k3k702ZOKiLJc3WVjuplzHhCUOGz7vYGh680lGh-uXM.woff) format("woff"); }
+
+@font-face { font-family: 'Open Sans'; font-style: italic; font-weight: 300; src: local("Open Sans Light Italic"), local("OpenSansLight-Italic"), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/PRmiXeptR36kaC0GEAetxh_xHqYgAV9Bl_ZQbYUxnQU.woff) format("woff"); }
+
+@font-face { font-family: 'Open Sans'; font-style: italic; font-weight: 400; src: local("Open Sans Italic"), local("OpenSans-Italic"), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/xjAJXh38I15wypJXxuGMBobN6UDyHWBl620a-IRfuBk.woff) format("woff"); }
+
+@font-face { font-family: 'Open Sans'; font-style: italic; font-weight: 700; src: local("Open Sans Bold Italic"), local("OpenSans-BoldItalic"), url(http://themes.googleusercontent.com/static/fonts/opensans/v8/PRmiXeptR36kaC0GEAetxjqR_3kx9_hJXbbyU8S6IN0.woff) format("woff"); }
+
+/*!
+ * gitmike
+ * This is github-like theme for Redmine.
+ * It is based on A1 theme version 1.0.3 by Kirill Bezrukov www.redminecrm.com.
  * @see https://github.com/makotokw/redmine-theme-gitmike
  * @license GPL3 License
  */
-body { color: #333; background-color: #fff; line-height: 1.4; }
+body { color: #333; background-color: #fff; line-height: 1.4; font-family: "Open Sans", Helvetica, arial, freesans, clean, sans-serif; font-size: 11pt; }
 
-#content h1, h2, h3, h4 { color: #333; }
+#content h1, h2, h3, h4 { color: #333; font-family: "Open Sans", Helvetica, arial, freesans, clean, sans-serif; }
 
-#header { font: 13px Helvetica, arial, freesans, clean, sans-serif; background: #fff; padding: 4px 8px 10px 6px; height: auto; }
+#header { font-family: "Open Sans", Helvetica, arial, freesans, clean, sans-serif; background: #fff; padding: 4px 8px 10px 6px; height: auto; }
 #header a { color: #4183c4; }
 #header > h1 { background: url(../images/logo.png) no-repeat 10px 7px; padding: 5px 50px; color: #393939; }
 
 #main { background: transparent; margin: 15px 15px 0px 15px; background-color: #fff; }
 
-#top-menu { font: 13px Helvetica, arial, freesans, clean, sans-serif; padding: 10px 10px 2px 20px; background-color: #f3f3f3; background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f9f9f9), color-stop(100%, #f3f3f3)); background-image: -webkit-linear-gradient(#f9f9f9, #f3f3f3); background-image: -moz-linear-gradient(#f9f9f9, #f3f3f3); background-image: -o-linear-gradient(#f9f9f9, #f3f3f3); background-image: linear-gradient(#f9f9f9, #f3f3f3); background-repeat: repeat-x; text-shadow: 0 1px 0 white; border-bottom: 1px solid #e5e5e5; }
+#top-menu { font: "Open Sans", Helvetica, arial, freesans, clean, sans-serif; padding: 10px 10px 2px 20px; background-color: #f3f3f3; background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f9f9f9), color-stop(100%, #f3f3f3)); background-image: -webkit-linear-gradient(#f9f9f9, #f3f3f3); background-image: -moz-linear-gradient(#f9f9f9, #f3f3f3); background-image: -o-linear-gradient(#f9f9f9, #f3f3f3); background-image: linear-gradient(#f9f9f9, #f3f3f3); background-repeat: repeat-x; text-shadow: 0 1px 0 white; border-bottom: 1px solid #e5e5e5; }
 #top-menu #loggedas { color: #222; }
 #top-menu a { color: #333; font-weight: bold; padding: 5px; margin-right: 0px; -webkit-transition: color 0.15s ease-in 0; -moz-transition: color 0.15s ease-in 0; -o-transition: color 0.15s ease-in 0; transition: color 0.15s ease-in 0; text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5); }
 #top-menu a:hover { color: #4183c4; text-decoration: none; }
