--- a/sass/application.scss
+++ b/sass/application.scss
@@ -1,4 +1,5 @@
 @import url(../../../stylesheets/application.css);
+@import 'googlewebfonts';
 
 @import 'themeheader';
 @import 'variables';
@@ -7,18 +8,23 @@
 
 //@import 'ja';
 
+
+
 body {
   color: #333;
   background-color: #fff;
   line-height: 1.4;
+  font-family: $baseFont;  
+  font-size: 11pt;
 }
 
 #content h1, h2, h3, h4 {
   color: #333;
+  font-family: $baseFont;  
 }
 
 #header {
-  font: $baseFont;
+  font-family: $baseFont;
   background: #fff;
   padding: 4px 8px 10px 6px;
   height: auto;
