--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -91,7 +91,7 @@ div.contact.details, div.deal.details { padding: 15px !important; margin: -11px 
 #sidebar h3 { color: #222; }
 
 #footer { background-color: #F8F8F8; border: 0px; border-top: 1px solid #E0E0E0; color: #636363; margin-top: 45px; padding: 15px; }
-#footer .bgl .bgr:after { content: " and gitmike theme"; }
+#footer .bgl .bgr:after { content: ""; }
 
 h2, h3, h4 { border-bottom: 0px; }
 
@@ -191,7 +191,7 @@ input[type="button"]:hover, input[type="submit"]:hover, input[type="reset"]:hove
 .btn.active, .btn:active { background-image: none; outline: 0; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05); }
 .btn.disabled, .btn[disabled] { cursor: default; background-image: none; opacity: 0.65; filter: alpha(opacity=65); -webkit-box-shadow: none; -moz-box-shadow: none; box-shadow: none; }
 
-input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="tel"], input[type="url"], textarea, select { outline: none; padding: 3px 4px; background-color: #fff; border: 1px solid #ccc; -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); -webkit-box-sizing: box-sizing; -moz-box-sizing: box-sizing; box-sizing: box-sizing; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; -webkit-transition: all 0.15s ease-in 0; -moz-transition: all 0.15s ease-in 0; -o-transition: all 0.15s ease-in 0; transition: all 0.15s ease-in 0; vertical-align: middle; }
+input[type="text"], input[type="password"], input[type="email"], input[type="number"], input[type="tel"], input[type="url"], textarea, select { outline: none; padding: 3px 4px; background-color: #fff; border: 1px solid #ccc; -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075); -webkit-box-sizing: box-sizing; -moz-box-sizing: box-sizing; box-sizing: box-sizing; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; -webkit-transition: all 0.15s ease-in 0; -moz-transition: all 0.15s ease-in 0; -o-transition: all 0.15s ease-in 0; transition: all 0.15s ease-in 0; vertical-align: middle; color: black; }
 #content input[type="text"], #content input[type="password"], #content input[type="email"], #content input[type="number"], #content input[type="tel"], #content input[type="url"], #content textarea, #content select { background-color: #fafafa; }
 input[type="text"]:focus, input[type="password"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="tel"]:focus, input[type="url"]:focus, textarea:focus, select:focus { border-color: #51a7e8; box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075), 0 0 5px rgba(81, 167, 232, 0.5); }
 
