--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -24,7 +24,7 @@ body { color: #333; background-color: #fff; line-height: 1.4; font-family: "Open
 
 #header { font-family: "Open Sans", Helvetica, arial, freesans, clean, sans-serif; background: #fff; padding: 4px 8px 10px 6px; height: auto; }
 #header a { color: #4183c4; }
-#header > h1 { background: url(../images/logo.png) no-repeat 10px 7px; padding: 5px 50px; color: #393939; }
+#header > h1 { background: url(../images/logo.png) no-repeat 10px 7px; padding: 5px 140px; color: #393939; height: 60px;}
 
 #main { background: transparent; margin: 15px 15px 0px 15px; background-color: #fff; }
 
